[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/GlassList.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Glass.tscn" type="PackedScene" id=3]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="GlassList" type="Node" parent="."]
script = ExtResource( 2 )
Glass = ExtResource( 3 )
setupMixNumber = 5

[node name="PopupLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="VictoryPopup" type="PopupPanel" parent="PopupLayer"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -61.0
margin_right = 75.0
margin_bottom = 61.0
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PopupLayer/VictoryPopup"]
margin_left = 4.0
margin_top = 4.0
margin_right = 146.0
margin_bottom = 118.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupLayer/VictoryPopup/MarginContainer"]
margin_left = 30.0
margin_top = 30.0
margin_right = 112.0
margin_bottom = 84.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="PopupLayer/VictoryPopup/MarginContainer/VBoxContainer"]
margin_right = 82.0
margin_bottom = 14.0
text = "Victory!"
align = 1

[node name="NewGame" type="Button" parent="PopupLayer/VictoryPopup/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 82.0
margin_bottom = 54.0
text = "New Game"

[connection signal="victory" from="GlassList" to="." method="_on_GlassList_victory"]
[connection signal="pressed" from="PopupLayer/VictoryPopup/MarginContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
